26 練習使用 Entity Framework 呼叫 Stored Procedure 預存程序以取得資料

--- a/MVC5Course/MVC5Course.csproj
+++ b/MVC5Course/MVC5Course.csproj
@@ -186,6 +186,9 @@
     <Compile Include="Models\Client.cs">
       <DependentUpon>Fabrics.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\usp_GetClientContribution_Result.cs">
+      <DependentUpon>Fabrics.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ViewsModels\ClientContributionViewModel.cs" />
     <Compile Include="Models\ViewsModels\ClientLoginViewModels.cs" />
     <Compile Include="Models\Fabrics.Context.cs">
@@ -314,6 +317,7 @@
     <Content Include="Views\EF\Details.cshtml" />
     <Content Include="Views\EF\ClientContribution.cshtml" />
     <Content Include="Views\EF\ClientContribution2.cshtml" />
+    <Content Include="Views\EF\ClientContribution3.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
